--- a/ANUNCIOS/templates/ubicacion.html
+++ b/ANUNCIOS/templates/ubicacion.html
@@ -50,38 +50,15 @@
     <div class="row">
       <div class="col-3">
         <div class="row gap-4">
-          <button type="button" class="btn btn-outline-danger">Publicar</button>
+          <button type="button" class="btn btn-outline-danger" onclick="location.href='index.html'">Publicar</button>
           <button type="button" class="btn btn-outline-danger" onclick="location.href='categoria.html'">Categoria</button>
-          <button type="button" class="btn btn-outline-danger" onclick="location.href='ubicacion.html'">Ubicacion</button>
+          <button type="button" class="btn btn-outline-danger">Ubicacion</button>
           <button type="button" class="btn btn-outline-danger">Comentarios</button>
         </div>
       </div>
       <div class="col-9">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="https://estaticos.muyinteresante.es/media/cache/1140x_thumb/uploads/images/gallery/594a1ced5bafe85dfd3c9869/gato-romano_0.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="https://www.prensalibre.com/wp-content/uploads/2019/10/gatos_01.jpg?quality=52" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="https://static.dw.com/image/58956274_303.jpg" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+        <div class="ubicacion">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1613.8088607331242!2d-70.02787061415594!3d-15.840508742808298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915d69eb4013ddbd%3A0xde99b3eca4371e4b!2sPlaza%20Mayor%20de%20Puno!5e0!3m2!1ses-419!2spe!4v1643144753360!5m2!1ses-419!2spe" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </div>
     </div>
